--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 }
 
 main{
+    
     position: absolute;
     top: 50%;
     left: 50%;
@@ -100,6 +101,7 @@ p , span{
     color:hsl(224, 23%, 55%);
     font-weight: bold ;
     font-size: 14px;
+    transition: ease-in-out .2s;
 }
 
 .link-2:hover{
@@ -118,4 +120,36 @@ p , span{
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+@media (max-width: 700px){
+
+    main{
+        height: 550px;
+    }
+
+    p {
+        font-size: 15px;
+        text-align: center;
+    }
+
+    .plano-container{
+        background-color:hsl(225, 100%, 98%) ;
+        padding: 15px;
+        display: flex;
+        width: 250px;
+    }
+
+    .plano-container a{
+        font-size: 14px;
+    }
+
+    .p1 , span{
+        font-size: 14px;
+    }
+
+    .attribution{
+        display:none;
+    }
+    
 }
